CCE-499 : z-index fix for tooltip for css site.

--- a/docs/template/public/less/_common.less
+++ b/docs/template/public/less/_common.less
@@ -93,6 +93,7 @@ h1.kss-title {
     .tooltip{
         position: relative;
         display: inline-block;
+        z-index: 1000;
     }
 
     .popover {
